# tonic

./: .gitignore  CMakeLists.txt  README.md  build_installer.sh  build_installer_demo.sh  build_musehub.sh  distribute.sh  sign_aax.sh  wrap_aax.sh
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: CompressorEngine.cpp  CompressorEngine.h
Source/Licensing/: ActivationDialog.cpp  ActivationDialog.h  LicenseManager.cpp  LicenseManager.h
Source/UI/: RockerSwitch.cpp  RockerSwitch.h  TonicLookAndFeel.cpp  TonicLookAndFeel.h  TumblerMeter.cpp  TumblerMeter.h
docs/: Tonic-design-spec.md  Tonic-magic-patterns-prompt-v2-lean.md  Tonic-magic-patterns-prompt.md
gui-reference/: App.tsx  index.css  tailwind.config.js
gui-reference/components/: Tonic.tsx
installer/windows/: tonic.iss
v2-webview/: README.md
v2-webview/plugin-src/: WebViewEditor.cpp  WebViewEditor.h
v2-webview/webview-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
v2-webview/webview-ui/src/: App.tsx  juce.d.ts  juceBridge.ts  styles.css
v2-webview/webview-ui/src/components/: ActivationOverlay.tsx  AuroraBackground.tsx  BoolToggle.tsx  CyberKnob.tsx  CycleToggle.tsx  MeterBar.tsx  ParticleField.tsx  PresetBrowser.tsx  SizePicker.tsx  StereoMeterBar.tsx
